move skills from cv to skills directory

--- a/resume.tex
+++ b/resume.tex
@@ -97,7 +97,7 @@
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
 \input{resume/experience.tex}
-\input{cv/skills.tex}
+\input{resume/skills.tex}
 \input{resume/honors.tex}
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
