--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -17,19 +17,19 @@
     {(2 yrs and 9 mos) Feb. 2021 - now} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Develop client side of EDR (Endpoint Detection and Response) with \textbf{Golang} for Linux machines by supporting Red-hat and Debian based systems.}
+        \item Develop client side of EDR (Endpoint Detection and Response) with \textbf{Golang} for Linux operating systems and ensured deployment on over 2000 Linux systems, resulting in awarded client security and enhanced threat detection capabilities.
         \begin{itemize}
-            \item Use \textbf{gRPC} as communication protocol of client and server.
-            \item Implement a log collector which gathers system logs (like \textbf{auditd} logs, \textbf{fanotify} notifications, etc.) and sends them to server. 
-            \item Develop an auto response mechanism that protects client against detected malware.
-            \item Create a service for both \textbf{Systemd} and \textbf{SysVinit}.
-            \item Wrap product with \textbf{RPM} and \textbf{Debian package} compatible with large range of Linux distros (CentOS, Red-hat, Ubuntu, Fedora).
-            \item Implement an updater service with Golang which is responsible for auto updating the package.
-            \item Optimize uploader and downloader module which increased its performance by 20\% and decreases network traffic about 30\%.
+            \item Established \textbf{gRPC} as the primary communication protocol between client and server, resulting in a 40\% reduction in latency and an overall improvement in system performance.
+            \item Implement a log collector which gathers system logs (like \textbf{Audit} logs, \textbf{Fanotify} notifications) and sends to server. 
+            \item Design an auto response mechanism that protects client against detected malware.
+            \item Developed and implemented a dual service solution for both \textbf{Systemd} and \textbf{SysVinit}.
+            \item Wrap product with \textbf{RPM} and \textbf{DEB} package which is compatible with CentOS, Red-hat, Ubuntu and Fedora distributions that covers 80\% of market’s customer systems.
+            \item Launch an updater service with Golang that updates automatically the package.
+            \item Enhanced the file processor module through the optimization of the Shannon algorithm, resulting in a notable 30\% decrease in CPU utilization and accelerated accuracy in file entropy calculations for effective identification of obfuscated files.
         \end{itemize}
-        \item {Implement database of server side, using \textbf{ent framework} in Golang.}
-        \item {Write unit tests for Golang packages and appropriate documents for all implemented modules..}
-        \item Utilize code review to enhance maintainability and collaborate with stakeholders and business stuff to satisfy customers.
+        \item Restructured server side database using Golang's \textbf{Ent framework}, resulting in a 10\% decrease in query execution benchmark time.
+        \item Customized comprehensive unit tests for Golang packages, ensuring code quality and reducing bug count by 40\%.
+        \item Collaborated with stakeholders and business teams to understand customer requirements, resulting in redesign of features that increased customer satisfaction by 25\%.
       \end{cvitems}
     }
 
@@ -41,9 +41,9 @@
     {(5 mos) Feb. 2020 - Jul. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Spend my internship in Sanjagh and implemented a \href{https://github.com/pooria1/url-shortener}{URL shortener}.}
-        \item {Learn working with APIs and writing \textbf{RESTful API} using \textbf{echo framework}.}
-        \item {Develop a cache service using Golang which caches response of another service. This cache improved response time up to 10 times faster.}
+        \item Launched a highly efficient \href{https://github.com/pooria1/url-shortener}{URL Shortener} project during internship at Sanjagh, reducing link generation time by 50\% and improving overall website performance by optimizing URL redirects.
+        \item Learned Producing APIs and writing \textbf{RESTful API} using \textbf{echo framework}.
+        \item Created a cache service using Golang which caches response of another service. This cache improved response time up to 10 times faster.
       \end{cvitems}
     }
 
