capitalize special words

--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -22,7 +22,7 @@
 %---------------------------------------------------------
   \cvskill
     {Linux Internals} % Category
-    {System calls, logging systems (e.g. syslog, rsyslog), auditing system, package managers (RPM, DPKG)} % Skills
+    {System calls, logging systems (e.g. Syslog, Rsyslog), auditing system, package managers (RPM, DPKG)} % Skills
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
