--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-+3 years experience in Golang development. Capable in Linux and generally UNIX based systems. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools. 
++3 years experience in Golang development. Capable in Linux and generally UNIX based systems. Interested in devising a better approach for challenging tasks, and learning new technologies and tools. 
 \end{cvparagraph}
