change color and job position

--- a/resume.tex
+++ b/resume.tex
@@ -28,7 +28,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-darknight}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -54,7 +54,7 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Pouria}{Kalantari}
 % \position{Software Engineer{\enskip\cdotp\enskip}Golang Developer}
-\position{Golang Developer}
+\position{Software Engineer}
 
 % \address{Computer Eng. Dept., Amirkabir University of Tech. (AUT), 424 Hafez Ave., Tehran, Iran}
 
