update thesis name and date

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -14,13 +14,13 @@
     {B.C. in Computer Engineering} % Degree
     {Amirkabir University of Technology} % Institution
     {Tehran, Iran} % Location
-    {Sep, 2018 – Present} % Date(s)
+    {Sep, 2018 – 2023} % Date(s)
     {
         \begin{cvitems}
         \item {Thesis Subject:}
         \begin{itemize}
-        \item {Automatic Program Repair in Golang}
-        \item {Supervisor: Dr.Soleiman Fallah}
+        \item {Automatic Repair of Golang Programs}
+        \item {Supervisor: Dr. Mehran Soleiman Fallah}
         \end{itemize}
         \end{cvitems}
     }
