add digikala to work expriences + remove additonal bullets from graph

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,44 +1,57 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Work Experience}
+\cvsection{Work Experiences}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+%---------------------------------------------------------
+  \cventry
+    {Software Engineer} % Job title
+    {\includegraphics[width=0.03\textwidth]{images/digikala.png} Digikala - \textnormal{an online store}} % Organization
+    {Tehran, Iran} % Location
+    {Mar. 2024 - present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item Developed and implemented features using \textbf{PHP}, enhancing application functionality.
+        \item Utilized Object-Relational Mapping (\textbf{ORM}) tools to streamline database communication.
+        \item Worked within a large corporate environment, collaborating across multiple teams to achieve project goals. Actively contributed to team projects, leveraging strong communication and teamwork skills to ensure successful task completion.
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
     {Golang System Developer in Linux EDR team} % Job title
-    {Graph inc - \textnormal{a cybersecurity company that offers an Advance Threat Detection system}} % Organization
+    {\includegraphics[width=0.027\textwidth]{images/graph-inc.png} Graph-inc - \textnormal{a cybersecurity company that offers an Advance Threat Detection system}} % Organization
     {Tehran, Iran} % Location
-    {(2 yrs and 9 mos) Feb. 2021 - now} % Date(s)
+    {Feb. 2021 - Mar. 2024} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item Develop client side of EDR (Endpoint Detection and Response) with \textbf{Golang} for Linux operating systems and ensured deployment on over 2000 Linux systems, resulting in awarded client security and enhanced threat detection capabilities.
+        \item Developed client side of EDR (Endpoint Detection and Response) with \textbf{Golang} for Linux operating systems and ensured deployment on over 2000 Linux systems, resulting in awarded client security and enhanced threat detection capabilities.
         \begin{itemize}
-            \item Established \textbf{gRPC} as the primary communication protocol between client and server, resulting in a 40\% reduction in latency and an overall improvement in system performance.
-            \item Implement a log collector which gathers system logs (like \textbf{Audit} logs, \textbf{Fanotify} notifications) and sends to server. 
-            \item Design an auto response mechanism that protects client against detected malware.
+            \item Established \textbf{gRPC} as the primary communication protocol between client and server.
+            \item Implemented a log collector which gathers system logs (like \textbf{Audit} logs, \textbf{Fanotify} notifications) and sends to server. 
+            \item Designed an auto response mechanism that protects client against detected malware.
             \item Developed and implemented a dual service solution for both \textbf{Systemd} and \textbf{SysVinit}.
-            \item Wrap product with \textbf{RPM} and \textbf{DEB} package which is compatible with CentOS, Red-hat, Ubuntu and Fedora distributions that covers 80\% of market’s customer systems.
-            \item Launch an updater service with Golang that updates automatically the package.
-            \item Enhanced the file processor module through the optimization of the Shannon algorithm, resulting in a notable 30\% decrease in CPU utilization and accelerated accuracy in file entropy calculations for effective identification of obfuscated files.
+            \item Wrap the product using \textbf{RPM} and \textbf{DEB} package manager which is compatible with CentOS, Red-hat, Ubuntu and Fedora distributions to facilitate initial installation and safe update.
+            \item Launched an updater service with Golang that updates automatically the package.
+            % \item Enhanced the file processor module through the optimization of the Shannon algorithm, resulting in a notable 30\% decrease in CPU utilization and accelerated accuracy in file entropy calculations for effective identification of obfuscated files.
         \end{itemize}
         \item Restructured server side database using Golang's \textbf{Ent framework}, resulting in a 10\% decrease in query execution benchmark time.
-        \item Customized comprehensive unit tests for Golang packages, ensuring code quality and reducing bug count by 40\%.
-        \item Collaborated with stakeholders and business teams to understand customer requirements, resulting in redesign of features that increased customer satisfaction by 25\%.
+        \item Customized comprehensive unit tests for Golang packages, ensuring code quality and reducing bug count.
+        % \item Collaborated with stakeholders and business teams to understand customer requirements, resulting in redesign of features that increased customer satisfaction by 25\%.
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
     {Golang Developer} % Job title
-    {Sanjagh - \textnormal{an advertising network platform that connects advertisers with publishers}} % Organization
+    {\raisebox{-0.18\baselineskip}{\includegraphics[width=0.022\textwidth]{images/sanjagh.png}} Sanjagh - \textnormal{an advertising network platform that connects advertisers with publishers}} % Organization
     {Tehran, Iran} % Location
-    {(5 mos) Feb. 2020 - Jul. 2020} % Date(s)
+    {Feb. 2020 - Jul. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item Launched a highly efficient \href{https://github.com/pooria1/url-shortener}{URL Shortener} project during internship at Sanjagh, reducing link generation time by 50\% and improving overall website performance by optimizing URL redirects.
