add digikala skills

--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming Languages} % Category
-    {\textbf{Skilled}: Golang \qquad \textbf{Experienced}: Python, C } % Skills
+    {\textbf{Skilled}: Golang \qquad \textbf{Experienced}: PHP, Python, C } % Skills
 
 %---------------------------------------------------------
   \cvskill
@@ -28,19 +28,19 @@
     {DevOps} % Category
     {Docker (familiar with concepts)} % Skills
 %---------------------------------------------------------
-  \cvskill
-    {Version Control System} % Category
-    {GIT (GitHub, GitLab)} % Skills
+  % \cvskill
+  %   {Version Control System} % Category
+  %   {GIT (GitHub, GitLab)} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Database} % Category
-    {SQLite, PostgreSQL, Redis} % Skills
+    {MySQL, SQLite, PostgreSQL, Redis} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Other} % Category
-    {gRPC, Bash, Jira} % Skills
+    {gRPC, Bash, Jira, Jenkins} % Skills
 
 %--------------------------------------------------------- \cvskill
   \cvskill
