update resume and add digikala expierience to it

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -11,6 +11,21 @@
 
 %---------------------------------------------------------
   \cventry 
+  {M.C.s. in Computer Science} % Degree
+  {Shahid Beheshti University} % Institution
+  {Tehran, Iran} % Location
+  {Sep, 2018 – Expected 2026} % Date(s)
+  {
+      \begin{cvitems}
+      \item {Specialization:}
+      \begin{itemize}
+      \item {Algorithms}
+      \end{itemize}
+      \end{cvitems}
+  }
+  \vspace{0.5cm}
+
+  \cventry 
     {B.C. in Computer Engineering} % Degree
     {Amirkabir University of Technology} % Institution
     {Tehran, Iran} % Location
