--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,21 +11,27 @@
 %---------------------------------------------------------
   \cventry
     {Software Engineer} % Job title
-    {\includegraphics[width=0.03\textwidth]{images/digikala.png} Digikala - \textnormal{an online store}} % Organization
+    {\includegraphics[width=0.03\textwidth]{images/digikala.png} Digikala - \textnormal{Iran's largest e-commerce platform and online marketplace}} % Organization
     {Tehran, Iran} % Location
     {Mar. 2024 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item Developed and implemented features using \textbf{PHP}, enhancing application functionality.
-        \item Utilized Object-Relational Mapping (\textbf{ORM}) tools to streamline database communication.
-        \item Worked within a large corporate environment, collaborating across multiple teams to achieve project goals. Actively contributed to team projects, leveraging strong communication and teamwork skills to ensure successful task completion.
+      \item \textbf{Variant Creation Rewrite}\\
+      Collaborated on the architectural transformation of Digikala's variant creation system, migrating from MVC to \textbf{Domain-Driven Design} patterns. Refactored legacy codebase and consolidated duplicate logic implementations, improving code maintainability and reducing technical debt. Achieved 20\% increase in vendor satisfaction scores across 200 top vendors through enhanced system efficiency and reliability.
+      \vspace{0.1cm}
+      \item \textbf{Risk Mitigation Project}\\
+      Designed and implemented automated content moderation system using \textbf{Elasticsearch} for real-time restricted word detection and developed frontend components using \textbf{Twig}. Collaborated with business team and product managers to define and implement risk assessment parameters. Significantly improved moderator accuracy through automated content analysis and risk scoring system.
+      \vspace{0.1cm}
+      \item \textbf{Multi Variant Infrastructure Project}\\
+      Architected and implemented enterprise-scale variant management system enabling multiple themes per product. Conducted comprehensive code analysis to identify and refactor variant-related dependencies across the codebase. Was involved in collaboration with multiple tribes (shop, finance, fulfillment, delivery) to ensure system-wide compatibility. Designed and implemented a centralized theme data service, enabling other services to access theme-related functionality through standardized service calls.
       \end{cvitems}
     }
+  \vspace{0.5cm}
 
 %---------------------------------------------------------
   \cventry
     {Golang System Developer in Linux EDR team} % Job title
-    {\includegraphics[width=0.027\textwidth]{images/graph-inc.png} Graph-inc - \textnormal{a cybersecurity company that offers an Advance Threat Detection system}} % Organization
+    {\includegraphics[width=0.027\textwidth]{images/graph-inc.png} Graph-inc - \textnormal{a cybersecurity company offering an Advance Threat Detection system}} % Organization
     {Tehran, Iran} % Location
     {Feb. 2021 - Mar. 2024} % Date(s)
     {
@@ -37,7 +43,7 @@
             \item Designed an auto response mechanism that protects client against detected malware.
             \item Developed and implemented a dual service solution for both \textbf{Systemd} and \textbf{SysVinit}.
             \item Wrap the product using \textbf{RPM} and \textbf{DEB} package manager which is compatible with CentOS, Red-hat, Ubuntu and Fedora distributions to facilitate initial installation and safe update.
-            \item Launched an updater service with Golang that updates automatically the package.
+            \item Launched an updater service with Golang that automatically updates the package.
             % \item Enhanced the file processor module through the optimization of the Shannon algorithm, resulting in a notable 30\% decrease in CPU utilization and accelerated accuracy in file entropy calculations for effective identification of obfuscated files.
         \end{itemize}
         \item Restructured server side database using Golang's \textbf{Ent framework}, resulting in a 10\% decrease in query execution benchmark time.
@@ -45,6 +51,7 @@
         % \item Collaborated with stakeholders and business teams to understand customer requirements, resulting in redesign of features that increased customer satisfaction by 25\%.
       \end{cvitems}
     }
+    \vspace{0.5cm}
 
 %---------------------------------------------------------
   \cventry
@@ -55,7 +62,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item Launched a highly efficient \href{https://github.com/pooria1/url-shortener}{URL Shortener} project during internship at Sanjagh, reducing link generation time by 50\% and improving overall website performance by optimizing URL redirects.
-        \item Learned Producing APIs and writing \textbf{RESTful API} using \textbf{echo framework}.
+        \item Learned to produce APIs and writing \textbf{RESTful API} using \textbf{echo framework}.
         \item Created a cache service using Golang which caches response of another service. This cache improved response time up to 10 times faster.
       \end{cvitems}
     }
