--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -17,16 +17,16 @@
 %---------------------------------------------------------
   \cvskill
     {Programming Languages} % Category
-    {\textbf{Skilled}: Golang \qquad \textbf{Experienced}: PHP, Python, C } % Skills
+    {Golang, PHP, Python, C} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Linux Internals} % Category
     {System calls, logging systems (e.g. Syslog, Rsyslog), auditing system, package managers (RPM, DPKG)} % Skills
 %---------------------------------------------------------
-  \cvskill
-    {DevOps} % Category
-    {Docker (familiar with concepts)} % Skills
+  % \cvskill
+  %   {DevOps} % Category
+  %   {Docker (familiar with concepts)} % Skills
 %---------------------------------------------------------
   % \cvskill
   %   {Version Control System} % Category
@@ -40,7 +40,7 @@
 %---------------------------------------------------------
   \cvskill
     {Other} % Category
-    {gRPC, Bash, Jira, Jenkins} % Skills
+    {REST API, gRPC, Elasticsearch, Docker, Twig} % Skills
 
 %--------------------------------------------------------- \cvskill
   \cvskill
