--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-+3 years experience in Golang development. Capable in Linux and generally UNIX based systems. Interested in devising a better approach for challenging tasks, and learning new technologies and tools. 
+Software Engineer with expertise in system and backend development. Experienced in designing scalable infrastructures, building system-level tools, and improving legacy architectures. Proven ability to collaborate with teams, mentor new joiners, and write maintainable, high-quality code. Passionate about solving technical challenges and staying current with emerging technologies.
 \end{cvparagraph}
