--- a/resume.tex
+++ b/resume.tex
@@ -98,6 +98,8 @@
 \input{resume/summary.tex}
 \input{resume/experience.tex}
 \input{resume/skills.tex}
+\newpage
+\input{resume/projects.tex}
 \input{resume/honors.tex}
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
