--- a/resume/education.tex
+++ b/resume/education.tex
@@ -14,7 +14,7 @@
   {M.C.s. in Computer Science} % Degree
   {Shahid Beheshti University} % Institution
   {Tehran, Iran} % Location
-  {Sep, 2018 – Expected 2026} % Date(s)
+  {Oct, 2024 – Expected 2026} % Date(s)
   {
       \begin{cvitems}
       \item {Specialization:}
@@ -29,7 +29,7 @@
     {B.C. in Computer Engineering} % Degree
     {Amirkabir University of Technology} % Institution
     {Tehran, Iran} % Location
-    {Sep, 2018 – 2023} % Date(s)
+    {Oct, 2018 – Sep 2023} % Date(s)
     {
         \begin{cvitems}
         \item {Thesis Subject:}
