fix project name

--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -14,7 +14,7 @@
     {Modified xv6, a simple Unix-like teaching OS developed at MIT, by implementing a round-robin scheduler to manage CPU time fairly among processes. Added a custom system call, getChildren, by extending the process structure and modifying the fork syscall to track child processes using a new global variable.}
     \vspace{0.2cm}
 
-    \href{https://github.com/99pouria/url-shortener?tab=readme-ov-file#url-shortener}{\faGithubSquare \textbf{ Modified xv6 OS}}
+    \href{https://github.com/99pouria/url-shortener?tab=readme-ov-file#url-shortener}{\faGithubSquare \textbf{ URL Shortener}}
     \vspace{0.1cm}
     \newline
     {Developed a URL shortener in Golang using Redis for fast URL storage and retrieval, with short UUIDs ensuring unique, efficient link generation and reliable redirect management.}
